--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,7 +6,13 @@
     <% @books.each do |book| %>
       <div class="col-sm-6 col-md-4 col-lg-3">
         <div class="card mb-4 shadow-sm">
-          <%= book.image.attached? ? image_tag(book.image.variant(resize: "400x400"), class: "book-cover") : content_tag(:span, "No cover page yet") %>
+          <% if book.image.attached? %>
+            <%= image_tag(book.image.variant(resize: "400x400"), class: "book-cover") %>
+          <% else %>
+            <div class="book-cover-ph">
+              <%= content_tag(:span, "No cover page yet") %>
+            </div>
+          <% end %>
           <div class="card-body">
             <h5 class="card-title mb-0"><%= book.title %></h5>
           </div>
