--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,7 @@
     object-fit: cover;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
+    max-width: 100%;
   }
   .book-cover-ph {
     width: 253px;
