--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,7 @@
     max-width: 100%;
   }
   .book-cover-ph {
-    width: 253px;
+    width: 100%;
     height: 400px;
     padding: 1.25rem;
     background-color: $gray-200;
@@ -44,5 +44,44 @@
     justify-content: center;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
-    span {color: $gray-600;}
+    span {color: $gray-500;}
   }
+
+/*------------------------------------------*/
+/*  Home books block
+/*------------------------------------------*/
+  .recent-books {
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    .items {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      .media {
+        display: flex;
+        align-items: flex-start;
+        width: 49%;
+        .book-cover-ph {
+          width: 100px;
+          height: 150px;
+          span {
+            color: $gray-500;
+            text-align: center;
+            font-size: 12px;
+          }
+        }
+        .list-group {
+          width: 100%;
+          .list-group-item {
+            padding: 0.1rem 0;
+            border: 0;
+          }
+        }
+        @include media-breakpoint-down(sm) {
+          width: 100%;
+        }
+      }
+    }
+  }
+
+
+
