--- a/app/views/categories/show_all.html.erb
+++ b/app/views/categories/show_all.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="mt-5">Все категории</h1>
-<div class="album py-4 bg-white">
+<h1 class="mt-3">Все категории</h1>
+<div class="album py-4">
   <div class="row">
     <% @books.each do |book| %>
       <div class="col-sm-6 col-md-4 col-lg-3">
@@ -20,12 +20,12 @@
             <li class="list-group-item">
               <span class="small text-muted"><strong>Автор:</strong>
                 <%= book.authors.collect { |a| a.name }.join(', ').html_safe %>
-              </small>
+              </span>
             </li>
             <li class="list-group-item">
               <span class="small text-muted"><strong>Дата публикации:</strong>
                 <%= book.published_at.strftime('%d.%m.%Y') %>
-              </small>
+              </span>
             </li>
           </ul>
         </div>
